tests/baselines/reference/getJavaScriptSyntacticDiagnostics4.baseline
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics4.ts':
/tests/cases/fourslash/a.js(1,1): error TS8009: The 'public' modifier can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    public class C { }
    ~~~~~~
!!! error TS8009: The 'public' modifier can only be used in TypeScript files.